[package]
name = "sqb-rs"
version = "0.1.0"
description = "Smash Ultimate Sequence Bank file tool"
authors = ["BenHall-7 <benjaminjahall@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "sqb"
path = "src/sqb/lib.rs"

[[bin]]
name = "sqb_yaml"
path = "src/sqb_yaml/main.rs"

[dependencies]
byteorder = "^1.3"
hash40 = "^0.4"
serde = { version = "^1.0", features = ["derive"] }
serde_yaml = "^0.8"
structopt = "^0.3"
